--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,10 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2023-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/25.yaml
+resolver: ghc-9.4.8
+system-ghc: true
+install-ghc: false
+compiler: ghc-9.4.8
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
