--- a/haskell-coursera-algorithms.cabal
+++ b/haskell-coursera-algorithms.cabal
@@ -59,7 +59,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules: MyLib, GraphFunctions, FileParser, Kosaraju
+    exposed-modules: MyLib, GraphFunctions, FileParser, Kosaraju, Dykstra
 
     -- Modules included in this library but not exported.
     other-modules:
@@ -77,18 +77,31 @@ library
     -- Base language which the package is written in.
     default-language: Haskell2010
 
+executable week2
+    -- Import common warning flags.
+    import:           warnings
+
+    -- .hs or .lhs file containing the Main module.
+    main-is:          Week2.hs
+
+    -- Other library packages from which modules are imported.
+    build-depends:
+        base ^>=4.17.2.1,
+        haskell-coursera-algorithms,
+        split
+
+    -- Directories containing source files.
+    hs-source-dirs:   app
+
+    -- Base language which the package is written in.
+    default-language: Haskell2010
+
 executable week1
     -- Import common warning flags.
     import:           warnings
 
     -- .hs or .lhs file containing the Main module.
     main-is:          Week1.hs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
 
     -- Other library packages from which modules are imported.
     build-depends:
